--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Black die matters.
+		    Black dice matters.
 	    </footer>
 	</body>
 </html>
